assets/css/style.scss
---
---

@import "{{ site.theme }}";
/* Constants */
$base-color: #159957;
$base-color-gradient: #155799;
$base-color-bg: #282c35;
$base-color-link: #15c26b;
$base-color-text: #fff;

/* Body */
body {
  margin: 0;
  background-color: $base-color-bg;
  color: $base-color-text;
  scroll-behavior: smooth;
}

/* Header */
header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 9;
  text-align: center;
  background-color: $base-color;
  background-image: linear-gradient(120deg, $base-color-gradient, $base-color);
}

/* The progress container (grey background) */
.progress-container {
  width: 100%;
  height: 8px;
  background: #ccc;
}

/* The progress bar (scroll indicator) */
.progress-bar {
  height: 8px;
  background: $base-color;
  width: 0%;
}

#content {
  margin: 260px auto 0 auto;
}

#content.sticky {
  margin: 160px auto 0 auto;
}

header > .container {
  display: block;
  align-items: baseline;
  max-width: 980px;
  margin: 0 auto;
  padding-top: 0.5rem;
  transition: all 0.2s ease;
}

header > .container .project-name {
  font-size: 4rem;
  @media screen and (min-width: 42em) and (max-width: 64em) {
    font-size: 3rem;
  }
  @media screen and (max-width: 42em) {
    font-size: 2rem;
  }
}

header > .container .project-info {
  display: inline-block;
}

header > .container .project-tagline {
  margin-bottom: 0;
  font-size: 1.5rem;
  @media screen and (min-width: 42em) and (max-width: 64em) {
    font-size: 1.4rem;
  }
  @media screen and (max-width: 42em) {
    font-size: 1.3rem;
  }
}

header > .container .project-btns {
  display: inherit;
}

header > .container .btn {
  padding: 0.5rem 1rem;
  margin: 0.5rem;
  font-size: 1.2rem;
  @media screen and (min-width: 42em) and (max-width: 64em) {
    font-size: 1.1rem;
  }
  @media screen and (max-width: 42em) {
    font-size: 1rem;
  }
}

/* Header-sticky */
header.sticky > .container {
  display: flex;
  font-size: 0.8rem;
  padding: 0;
  align-items: center;
}

header.sticky .project-name {
  margin: 0;
  font-size: 3rem;
}

header.sticky .project-info {
  display: inline-block;
  margin-bottom: 0;
  font-size: 2.5rem;
}

header.sticky .project-tagline {
  font-size: 1.5rem;
  @media screen and (min-width: 42em) and (max-width: 64em) {
    font-size: 1.1rem;
  }
  @media screen and (max-width: 42em) {
    font-size: 1rem;
  }
}

header.sticky > .container .project-btns {
  display: inline-flex;
}

header.sticky .btn {
  font-size: 1rem;
}

/* Icons */
ul.icons {
  display: inline-flex;
  list-style: none;
  margin: 0;
}

ul.icons.sticky {
  display: inline-block;
  list-style: none;
}

ul.icons > li {
  padding: 0 1em 0 0;
}

.icon {
  text-decoration: none;
  border-bottom: none;
  position: relative;
  height: 2.25em;
  width: 2.25em;
}

.icon .label {
  display: none;
}

.icon:before {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: FontAwesome;
  font-style: normal;
  font-weight: 400;
  text-transform: none !important;
}

ul.icons > li .icon:before {
  font-size: 2em;
}

/* Social Icons*/
.social-icons a,
i,
span {
  border: none;
  font-size: 1em;
  text-decoration: none;
  color: $base-color-text;
}

.social-icons a:hover {
  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
}

.fb-hover:hover {
  color: #4167b2;
}

.twitter-hover:hover {
  color: #1da1f3;
}

.linkedin-hover:hover {
  color: #0077b5;
}

.github-hover:hover {
  color: black;
}

.youtube-hover:hover {
  color: #ff0000;
}

/* Position img inside p */
.img_container {
  text-align: center;
  width: 180px;
  height: 180px;
}

/* Anchor with fixed header */
:target::before {
  content: "";
  display: block;
  height: 160px; /* fixed header height*/
  margin: -160px 0 0; /* negative fixed header height */
}

/* Table links icon */
table td a:after {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: FontAwesome;
  font-style: normal;
  font-weight: 400;
  text-transform: none !important;
}

table td a::after {
  content: "\f08e";
  width: 24px;
  height: 24px;
}

/* Fixed navigate buttons */
.fixed-nav-dropup {
  position: fixed;
  bottom: 40px;
  right: 20px;
}

/* The container <div> - needed to position the dropup content */
.dropup {
  position: relative;
  display: inline-block;
}

/* Dropup Button */
.dropbtn {
  background-color: $base-color;
  color: $base-color-text;
  padding: 16px;
  font-size: 16px;
  border: none;
}

.dropbtn::after {
  content: "";
  max-width: 0px;
}

/* Dropup content (Hidden by Default) */
.dropup-content {
  // display: none;
  max-height: 0;
  position: absolute;
  bottom: 50px;
  background-color: #f1f1f1;
  width: 100%;
  min-width: 100px;
  box-shadow: 0px 8px 16px 0px rgba($base-color-link, 0.2);
  z-index: 1;
  overflow: auto;
}

/* Links inside the dropup */
.dropup-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Dropup Button real links */
.dropup-content a.dropbtn-link {
  text-decoration: underline;
  color: $base-color-gradient;
}

/* Change color of dropup links on hover */
.dropup-content a:hover {
  background-color: #ddd;
}

/* Show the dropup menu on hover */
.dropup:hover .dropup-content {
  // display: block;
  // auto height won't work, must set something bigger than actual element
  max-height: 500px;
  transition: max-height 0.2s ease-in;
}

/* Change the background color of the dropup button when the dropup content is shown */
.dropup:hover .dropbtn {
  background-color: $base-color-gradient;
  transition: background-color 0.2s ease-in;
}

.dropup:hover .dropbtn::after {
  max-width: 100%;
  transition: max-width 0.2s ease-in;
}

